Fix cookies, add Login and GetUserData methods
