# internal/api/controllers/auth.go
@@ -4,10 +4,13 @@ import (
 	"context"
 	"net/http"
 
+	"github.com/go-park-mail-ru/2022_1_CJ/internal/constants"
 	"github.com/go-park-mail-ru/2022_1_CJ/internal/model/dto"
 	"github.com/go-park-mail-ru/2022_1_CJ/internal/service"
+	"github.com/go-park-mail-ru/2022_1_CJ/internal/utils"
 	"github.com/labstack/echo"
 	"github.com/sirupsen/logrus"
+	"github.com/spf13/viper"
 )
 
 type AuthController struct {
@@ -25,6 +28,22 @@ func (c *AuthController) SignupUser(ctx echo.Context) error {
 	if err != nil {
 		return err
 	}
+
+	return ctx.JSON(http.StatusOK, response)
+}
+
+func (c *AuthController) LoginUser(ctx echo.Context) error {
+	request := new(dto.LoginUserRequest)
+	if err := ctx.Bind(request); err != nil {
+		return err
+	}
+
+	response, err := c.registry.AuthService.LoginUser(context.Background(), request)
+	if err != nil {
+		return err
+	}
+
+	ctx.SetCookie(utils.CreateCookie(constants.CookieKeyAuthToken, response.AuthToken, viper.GetInt64(constants.ViperJWTTTLKey)))
 
 	return ctx.JSON(http.StatusOK, response)
 }
