# internal/api/controllers/user.go
@@ -1,0 +1,39 @@
+package controllers
+
+import (
+	"context"
+	"net/http"
+
+	"github.com/go-park-mail-ru/2022_1_CJ/internal/constants"
+	"github.com/go-park-mail-ru/2022_1_CJ/internal/model/dto"
+	"github.com/go-park-mail-ru/2022_1_CJ/internal/service"
+	"github.com/labstack/echo"
+	"github.com/sirupsen/logrus"
+)
+
+type UserController struct {
+	log      *logrus.Entry
+	registry *service.Registry
+}
+
+func (c *UserController) GetUserData(ctx echo.Context) error {
+	request := new(dto.GetUserDataRequest)
+	if err := ctx.Bind(request); err != nil {
+		return err
+	}
+
+	if len(request.UserID) == 0 {
+		request.UserID = ctx.Request().Header.Get(constants.HeaderKeyUserID)
+	}
+
+	response, err := c.registry.UserService.GetUserData(context.Background(), request)
+	if err != nil {
+		return err
+	}
+
+	return ctx.JSON(http.StatusOK, response)
+}
+
+func NewUserController(log *logrus.Entry, registry *service.Registry) *UserController {
+	return &UserController{log: log, registry: registry}
+}
