# internal/model/dto/auth.go
@@ -9,3 +9,10 @@ type SignupUserRequest struct {
 }
 
 type SignupUserResponse BasicResponse
+
+type LoginUserRequest struct {
+	Email    string `json:"email"    validate:"required,email"`
+	Password string `json:"password" validate:"required"`
+}
+
+type LoginUserResponse AuthTokenResponse
