# internal/model/dto/common.go
@@ -6,3 +6,7 @@ type ErrorResponse struct {
 	Message string `json:"message"`
 	Code    int    `json:"code"`
 }
+
+type AuthTokenResponse struct {
+	AuthToken string `json:"auth_token"`
+}
